package(default_visibility = ["//visibility:public"])

picotool_binary_data_header(
    name = "rp2350_a2_rom_end_bin",
    src = "rp2350_a2_rom_end.bin",
    out = "rp2350_a2_rom_end.h",
)

picotool_binary_data_header(
    name = "rp2350_a3_rom_end_bin",
    src = "rp2350_a3_rom_end.bin",
    out = "rp2350_a3_rom_end.h",
)

picotool_binary_data_header(
    name = "rp2350_a4_rom_end_bin",
    src = "rp2350_a4_rom_end.bin",
    out = "rp2350_a4_rom_end.h",
)

cc_library(
    name = "model",
    srcs = [
        "model.cpp",
    ],
    hdrs = [
        "model.h",
        "rp2350_a2_rom_end.h",
        "rp2350_a3_rom_end.h",
        "rp2350_a4_rom_end.h",
    ],
    includes = ["."],
    deps = [
        "//errors",
        "@pico-sdk//src/common/boot_uf2_headers",
        "@pico-sdk//src/common/boot_picoboot_headers",
    ],
)
