package(default_visibility = ["//visibility:public"])

cc_library(
    name = "model",
    srcs = [
        "model.cpp",
    ],
    hdrs = [
        "addresses.h",
        "model.h",
        "//:rp2350_a2_rom_end.h",
        "//:rp2350_a3_rom_end.h",
        "//:rp2350_a4_rom_end.h",
    ],
    includes = ["."],
    deps = [
        "//errors",
        "@pico-sdk//src/common/boot_uf2_headers",
        "@pico-sdk//src/common/boot_picoboot_headers",
    ],
)

filegroup(
    name = "rp2350_a2_rom_end_bin",
    srcs = ["rp2350_a2_rom_end.bin"],
)

filegroup(
    name = "rp2350_a3_rom_end_bin",
    srcs = ["rp2350_a3_rom_end.bin"],
)

filegroup(
    name = "rp2350_a4_rom_end_bin",
    srcs = ["rp2350_a4_rom_end.bin"],
)
