load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pre_generated_otp_header",
    hdrs = ["rp2350.json.h"],
    includes = ["."],
)

cc_binary(
    name = "otp_header_parser",
    srcs = ["otp_header_parse.cpp"],
    copts = select({
        "@platforms//os:windows": [],
        "//conditions:default": [
            "-Wno-unused-variable",
        ],
    }),
    deps = ["//lib/nlohmann_json:json"],
)
