load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "whereami",
    srcs = [
        "whereami++.cpp",
    ],
    hdrs = [
        "whereami.c",
        "whereami.h",
        "whereami++.h",
    ],
    includes = ["."],
)
